# flaskdemo

./: README.md
OA/: config.py  oa.conf  pyproject.toml  run.py
OA/app/: __init__.py  factory.py  models.py
OA/app/blueprints/auth/: __init__.py  routes.py
OA/app/blueprints/main/: __init__.py  routes.py
OA/app/extensions/: __init__.py  sqlalchemy.py
OA/migrations/versions/: f2f7cb98a826_1st.py
flask-demo/: basic_main.py  main.py  orm.py  pyproject.toml
flask-demo/static/css/: style.css
flask-demo/static/js/: script.js
flask-demo/templates/: base.html  blog.html  child.html  control.html  filter.html  hello.html  statics.html
flask-demo/utils/: test_utils.py
prd/: alidemo.md  aliprd.md  mysql_web_development_guide.md  prd.md  prd2.md  presentation.md  project_plan.md  web_project_plan.md
